Add all style requests to styles.css

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,46 @@
 /* css reset */
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    padding: 40px;
+  padding: 40px;
+  font-family: Arial, Helvetica, sans-serif, "Times New Roman";
+  color: rgb(100, 100, 100);
 }
 
 blockquote {
-    margin: 0 0 0 30px;
+  margin: 0 0 0 30px;
+  font-style: italic;
 }
 
+h1 {
+  font-size: 3em;
+}
+h2 {
+  font-size: 2em;
+}
+h3 {
+  font-size: 1.5em;
+  letter-spacing: -4px;
+  word-spacing: 4px;
+}
+
+span {
+  text-decoration-line: line-through;
+}
+
+em {
+  text-transform: capitalize;
+}
+
+strong {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+a {
+  text-decoration: none;
+  color: green;
+}
